<resources>
    <string name="app_name">Sherazi</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="title_activity_sign_up" translatable="false">SignUp</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_activity_pet_food" translatable="false">PetFood</string>
    <string name="title_activity_food__accessories" translatable="false">Food_Accessories</string>
    <string name="title_activity_brands" translatable="false">Brands</string>
    <string name="title_activity_products_list" translatable="false">ProductsList</string>
    <string name="title_activity_cart" translatable="false">CartActivity</string>
    <string name="title_activity_address" translatable="false">AddressActivity</string>
    <string name="title_activity_base" translatable="false">BaseActivity</string>
    <string name="title_activity_payments" translatable="false">Payments</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_my_orders" translatable="false">MyOrders</string>
    <string name="title_activity_address_list" translatable="false">AddressActivityList</string>
    <string name="title_activity_address_add" translatable="false">AddressAddActivity</string>
    <string name="title_activity_orderconfirmation" translatable="false">Orderconfirmation</string>
    <string name="title_activity_order_details" translatable="false">OrderDetailsActivity</string>
    <string name="title_activity_my_account" translatable="false">MyAccount</string>
    <string name="title_activity_forgot_password" translatable="false">ForgotPassword</string>
    <string name="title_activity_change_password" translatable="false">ChangePassword</string>
    <string name="title_activity_change_email" translatable="false">ChangeEmail</string>
    <string name="title_activity_change_mobile" translatable="false">ChangeMobile</string>
    <string name="title_activity_product_details" translatable="false">ProductDetails</string>
    <string name="title_activity_notification" translatable="false">NotificationActivity</string>
    <string name="title_activity_place_picker" translatable="false">PlacePickerActivity</string>
    <string name="title_activity_notificatin_details" translatable="false">NotificatinDetails</string>
    <string name="title_activity_change_language" translatable="false">ChangeLanguage</string>
    <string name="title_activity_register_otp" translatable="false">RegisterOtp</string>


    <string name="mobile_number">Mobile Number</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip_and_shop">Skip and Shop</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="new_mobile_number">New Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="password">Password</string>
    <string name="update_mobile">Update Mobile</string>
    <string name="regenerate_otp">Regenerate OTP</string>
    <string name="new_email">New Email</string>
    <string name="update_email">Update Email</string>
    <string name="delivery_header">Delivery</string>
    <string name="select_address">Select Address</string>
    <string name="add_address">Add Address</string>
    <string name="brand">Brand</string>
    <string name="my_cart">My Cart</string>
    <string name="Change_email">Change Email</string>
    <string name="change_mobile">Change Mobile</string>
    <string name="my_account">My Account</string>
    <string name="my_orders">My Orders</string>
    <string name="notifications">Notifications</string>
    <string name="order_details">Order Details</string>
    <string name="payments">Payments</string>
    <string name="pet_foods">Pet Food</string>
    <string name="products">Products</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="sar">SAR</string>
    <string name="status">Status</string>
    <string name="ordered_on">Ordered on</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price :</string>
    <string name="nutrition_contents">Nutrition Contents.</string>
    <string name="welcome">Welcome</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="change_email">Change Email</string>
    <string name="my_address">My Address</string>
    <string name="shipping_details">SHIPPING DETAILS</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="selling_price">Selling Price</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="vat">VAT</string>
    <string name="total_amount">Total Amount</string>
    <string name="payment_mode">PAYMENT MODE :</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="login_or_register">Sign in or Sign up</string>
    <string name="change_language">Change Language</string>
    <string name="select_default_language">Select default language</string>
    <string name="new_order">New Order</string>
    <string name="change_address">Change Address</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="continue_button">Continue</string>
    <string name="select_google_location">Select Google Location</string>
    <string name="already_have_an_account_login">Already have an account? Sign in</string>
    <string name="change_password">Change Password</string>

    <string name="Enter_email">Enter Email</string>
    <string name="india">+91</string>
    <string name="soudia">+966</string>
    <string name="enter_valid_mobile">Enter valid mobile number</string>
    <string name="Enter_mobile_number">Enter mobile number</string>
    <string name="Special_characters_not_allowed">Special characters not allowed</string>
    <string name="Enter_password">Enter password</string>
    <string name="Password_character_limit_exceeded">Password character limit exceeded</string>
    <string name="Press_once_again_to_exit">Press once again to exit!</string>
    <string name="Enter_name">Enter name</string>
    <string name="Please_enter_valid_email">Please enter valid email</string>
    <string name="Password_doesnt_matches">Password doesn\'t matches</string>
    <string name="Cart_is_empty">Cart is empty!</string>
    <string name="do_you_want_to_remove">Do you want to remove?</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="Please_enter_address">Please enter address</string>
    <string name="slash">/-</string>
    <string name="orderid">ORDER ID - </string>
    <string name="Please_enter_your_name">Please enter your name</string>
    <string name="Please_add_an_item_in_cart">Please add an item in cart !</string>
    <string name="Order_Details">Order Details</string>
    <string name="OTP_is_required">OTP is required</string>
    <string name="Enter_new_password">Enter new password</string>
    <string name="Enter_current_password">Enter current password</string>
    <string name="sort_by">SORT BY</string>
    <string name="price_high_to_low">Price High To Low</string>
    <string name="price_low_to_high">Price Low To High</string>
    <string name="name_ascenting">Name Ascending</string>
    <string name="name_descending">Name Descending</string>
    <string name="apply">APPLY</string>
    <string name="Product_out_of_stock">Product out of stock</string>
    <string name="Please_select_an_item">Please select quantity</string>
    <string name="Please_enter_name">Please enter name</string>
    <string name="only_left">only left</string>
    <string name="product_details">Product Details</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="title_activity_gallery_view" translatable="false">GalleryView</string>
    <string name="product_images">Product Images</string>
    <string name="Please_add_address">Please add address!</string>
    <string name="only">only</string>
    <string name="left">left</string>
    <string name="update_address">Update Address</string>
    <string name="track_order">Track Order</string>
    <string name="no_notification_found">You do not have any notifications!</string>
    <string name="no_address_history">No saved address !</string>
    <string name="no_order_history">Looks like you do not have any orders!</string>
    <string name="no_products_available">No products available</string>
    <string name="no_brands_available">No brands available</string>
    <string name="Set_as_Default">Set as default</string>
    <string name="Default">Default</string>
    <string name="set_as_default">Set as default</string>
    <string name="select">Select</string>
    <string name="order_complete">Order Complete</string>


</resources>
