<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bgas"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:paddingTop="1dp"
            android:id="@+id/sortby"
            android:textSize="13dp"
            android:textAppearance="@style/AppTheme.MontserratBold"
            android:text="@string/sort_by"
            android:gravity="center|start"
            android:paddingStart="40dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#26f2f4f2"/>

        <RadioGroup
            android:id="@+id/Sort_group"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >


            <RadioButton
                android:id="@+id/radio2"
                android:layout_marginStart="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:buttonTint="#fff"
                android:textAppearance="@style/AppTheme.MontserratLight"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:checked="true"
                android:text="@string/price_high_to_low" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingStart="10dp"
                android:textAppearance="@style/AppTheme.MontserratLight"
                android:textColor="@android:color/white"
                android:paddingEnd="10dp"
                android:layout_marginTop="5dp"
                android:buttonTint="#fff"
                android:text="@string/price_low_to_high" />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_marginStart="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:buttonTint="#fff"
                android:textAppearance="@style/AppTheme.MontserratLight"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@android:color/white"
                android:text="@string/name_ascenting" />


            <RadioButton
                android:id="@+id/radio5"
                android:layout_marginStart="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:buttonTint="#fff"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/AppTheme.MontserratLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white"
                android:text="@string/name_descending" />




        </RadioGroup>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"

                android:clickable="true"
                android:id="@+id/CancelPopUp"
                android:layout_weight="1"
                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    android:id="@+id/cance"
                    android:gravity="center"
                    android:background="@drawable/buttoncurve"

                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent"
            />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"

                android:clickable="true"
                android:id="@+id/ApplyPopUP"
                android:layout_weight="1"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/apply"
                    android:gravity="center"
                    android:id="@+id/appl"
                    android:background="@drawable/buttoncurve"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</LinearLayout>