<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sort_bg"
        android:orientation="vertical"
       >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:textColor="@android:color/black"
            android:padding="40dp"
            android:text="@string/do_you_want_to_remove"
            android:gravity="center|start"



            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f2f4f2"/>





        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f2f4f2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"

            android:clickable="true"
            android:id="@+id/CancelPopUp"
            android:layout_weight="1"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#f2f4f2"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"

            android:clickable="true"
            android:id="@+id/ApplyPopUP"
            android:layout_weight="1"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ok"
                android:gravity="center"
                android:textColor="#333333"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>



    </LinearLayout>

    </LinearLayout>

</LinearLayout>