<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cgtin.admin.sherazipetshopkimo.HomeActivity.Orderconfirmation"
    tools:showIn="@layout/activity_orderconfirmation">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/fstlayout"

        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/splash_icon"
                android:layout_width="320dp"
                android:layout_height="320dp"

                android:scaleType="fitXY"
                app:srcCompat="@drawable/confirm_image" />
        </LinearLayout>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginTop="300dp"
            android:text="@string/order_complete"
            android:id="@+id/food_name"
            android:textAppearance="@style/AppTheme.MontserratRegular"
            android:textColor="#FFF"
            android:textSize="23dp"
            />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/track_order"

            android:gravity="center"
            android:id="@+id/track"
            android:textColor="@android:color/black"
            android:background="@drawable/buttoncurve"
            android:layout_height="35dp">

        </TextView>
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/new_order"
            android:id="@+id/NewOrder"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:background="@drawable/buttoncurve"
            android:layout_height="35dp">

        </TextView>


    </LinearLayout>


</LinearLayout>








</RelativeLayout>
