<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cgtin.admin.sherazipetshopkimo.HomeActivity.CartActivity"
    tools:showIn="@layout/activity_cart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/no_record"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:background="@drawable/ic_cart"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/Cart_is_empty"
            />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/PostReq_Recy"
        android:clipToPadding="false"
        android:clickable="false"
        android:layout_marginTop="?attr/actionBarSize"
        android:focusable="false"
        android:layout_above="@+id/cntnue_above"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/cntnue_above"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingStart="20dp"
        android:id="@+id/continues"

        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">



        <TextView
            android:layout_width="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/continue_button"

            android:gravity="center"
            android:textColor="@android:color/white"
            android:background="@drawable/button_pink"
            android:layout_height="40dp">

        </TextView>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            android:background="#F44336"
            android:id="@+id/internet"
            android:layout_height="25dp">


            <TextView
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/please_check_your_internet_connection"
                android:layout_height="wrap_content" />



        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
